--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,6 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: ['bootstrap_5_layout.html.twig']
     globals: 
         contact_adress: '23 Rue Jules Valles, Choisy-le-Roi, France'
         contact_phone: '+33 768 999 148'
